[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/contend_rasho.gd" type="Script" id=1]
[ext_resource path="res://sprites/obj_inte/laser_vertical_x6.png" type="Texture" id=2]
[ext_resource path="res://sprites/obj_inte/cara_vigilando_plantilla (2).png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.94362, 7.94616 )

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 1.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=5]
resource_name = "alerta_dos"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=6]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[node name="contend_rasho" type="Node2D"]
script = ExtResource( 1 )

[node name="rasho_laser" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.627451 )
position = Vector2( 176.094, 223.682 )
texture = ExtResource( 2 )
vframes = 2
hframes = 2

[node name="area_rasho" type="Area2D" parent="rasho_laser"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rasho_laser/area_rasho"]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="rasho_laser"]
anims/move = SubResource( 2 )

[node name="punto_a" type="Sprite" parent="."]
position = Vector2( 176.351, 176.346 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
vframes = 5
hframes = 5

[node name="anim_estado" type="AnimationPlayer" parent="punto_a"]
anims/activo = SubResource( 3 )
anims/alerta = SubResource( 4 )
anims/alerta_dos = SubResource( 5 )
anims/apagado = SubResource( 6 )
[connection signal="body_entered" from="rasho_laser/area_rasho" to="." method="_on_area_rasho_body_entered"]
[connection signal="body_exited" from="rasho_laser/area_rasho" to="." method="_on_area_rasho_body_exited"]
